move the stack things to org.scalatest under examples